--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ cache: pip
 install:
   - pip3 install -r requirements.txt
 script:
-  - python3 -m pytest -v
+  - python3 -m pytest -v tests/test_search.py
